--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="./css/bootstrap.min.css"/>
     <link rel="stylesheet" href="./css/custom.css"/>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script type="text/javascript" src="js/build.js"></script>
 </head>
 <body ng-app="app">
